RDMA/cxgb4: Ignore read reponse type 1 CQEs (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16424,6 +16424,7 @@
 	patches.drivers/cxgb4-0113-RDMA-cxgb4-Save-the-correct-map-length-for-fast_reg_.patch
 	patches.drivers/cxgb4-0114-RDMA-cxgb4-Don-t-leak-skb-in-c4iw_uld_rx_handler.patch
 	patches.drivers/cxgb4-0115-RDMA-cxgb4-Fix-possible-memory-leak-in-RX_PKT-proces.patch
+	patches.drivers/cxgb4-0116-RDMA-cxgb4-Ignore-read-reponse-type-1-CQEs.patch
 
 	########################################################
 	# Wireless Networking
