--- a/series.conf
+++ b/series.conf
@@ -16416,6 +16416,7 @@
 	patches.drivers/cxgb4-0105-cxgb4-iw_cxgb4-Doorbell-Drop-Avoidance-Bug-Fixes.patch
 	patches.drivers/cxgb4-0106-RDMA-cxgb4-Fix-underflows-in-c4iw_create_qp.patch
 	patches.drivers/cxgb4-0107-RDMA-cxgb4-Fix-four-byte-info-leak-in-c4iw_create_cq.patch
+	patches.drivers/cxgb4-0108-RDMA-cxgb4-Cap-CQ-size-at-T4_MAX_IQ_SIZE.patch
 
 	########################################################
 	# Wireless Networking
