iw_cxgb4: Detect Ing. Padding Boundary at run-time (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16477,6 +16477,7 @@
 	patches.drivers/cxgb4-0166-RDMA-cxgb4-Fix-skb_leak-in-reject_cr.patch
 	patches.drivers/cxgb4-0167-RDMA-cxgb4-Clean-up-connection-on-ARP-error.patch
 	patches.drivers/cxgb4-0168-RDMA-cxgb4-Initialize-the-device-status-page.patch
+	patches.drivers/cxgb4-0169-iw_cxgb4-Detect-Ing.-Padding-Boundary-at-run-time.patch
 
 	########################################################
 	# Wireless Networking
