--- a/series.conf
+++ b/series.conf
@@ -16463,6 +16463,7 @@
 	patches.drivers/cxgb4-0152-cxgb4-Update-fw-interface-file-for-DCBx-support.-Add.patch
 	patches.drivers/cxgb4-0153-cxgb4-Add-DCBx-support-codebase-and-dcbnl_ops.patch
 	patches.drivers/cxgb4-0154-cxgb4-Integrate-DCBx-support-into-cxgb4-module.-Regi.patch
+	patches.drivers/cxgb4-0155-cxgb4-Makefile-Kconfig-changes-for-DCBx-support.patch
 
 	########################################################
 	# Wireless Networking
