net/cxgb4: Fix referencing freed adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16394,6 +16394,7 @@
 	patches.drivers/cxgb4-0083-RDMA-cxgb4-Fix-gcc-warning-on-32-bit-arch.patch
 	patches.drivers/cxgb4-0084-net-cxgb4-Avoid-disabling-PCI-device-for-towice.patch
 	patches.drivers/cxgb4-0085-net-cxgb4-Don-t-retrieve-stats-during-recovery.patch
+	patches.drivers/cxgb4-0086-net-cxgb4-Fix-referencing-freed-adapter.patch
 
 	########################################################
 	# Wireless Networking
