cxgb4: Query firmware for T5 ULPTX MEMWRITE DSGL capabilities (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16401,6 +16401,7 @@
 	patches.drivers/cxgb4-0090-cxgb4-Print-adapter-VPD-Part-Number-instead-of-Engin.patch
 	patches.drivers/cxgb4-0091-cxgb4-Allow-10G-ports-to-have-multiple-queues.patch
 	patches.drivers/cxgb4-0092-cxgb4-LE-Workaround-is-not-atomic-in-firmware.patch
+	patches.drivers/cxgb4-0093-cxgb4-Query-firmware-for-T5-ULPTX-MEMWRITE-DSGL-capa.patch
 
 	########################################################
 	# Wireless Networking
