rdma/cxgb4: Fixes cxgb4 probe failure in VM when PF is exposed through PCI Passthrough (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16469,6 +16469,7 @@
 	patches.drivers/cxgb4-0158-cxgb4-Not-need-to-hold-the-adap_rcu_lock-lock-when-r.patch
 	patches.fixes/net-Add-sysfs-file-for-port-number.patch
 	patches.drivers/cxgb4-0160-cxgb4-use-dev_port-to-identify-ports.patch
+	patches.drivers/cxgb4-0161-rdma-cxgb4-Fixes-cxgb4-probe-failure-in-VM-when-PF-i.patch
 
 	########################################################
 	# Wireless Networking
