cxgb4: Don't allocate adapter structure for all PF's (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16512,6 +16512,7 @@
 	patches.drivers/cxgb4-0201-cxgb4-Fix-t4_flash_erase_sectors-to-throw-an-error-w.patch
 	patches.drivers/cxgb4-0202-cxgb4-Add-warning-msg-when-attaching-to-adapters-whi.patch
 	patches.drivers/cxgb4-0203-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
+	patches.drivers/cxgb4-0204-cxgb4-Don-t-allocate-adapter-structure-for-all-PF-s.patch
 
 	########################################################
 	# Wireless Networking
