RDMA/cxgb4: set error code on kmalloc() failure (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16429,6 +16429,7 @@
 	patches.drivers/cxgb4-0118-RDMA-cxgb4-Update-snd_seq-when-sending-MPA-messages.patch
 	patches.drivers/cxgb4-0119-cxgb4-Call-dev_kfree-consume_skb_any-instead-of-dev_.patch
 	patches.drivers/cxgb4-0120-chelsio-Remove-addressof-casts-to-same-type.patch
+	patches.drivers/cxgb4-0121-RDMA-cxgb4-set-error-code-on-kmalloc-failure.patch
 
 	########################################################
 	# Wireless Networking
