IB/cxgb4: Fix formatting of physical address (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16374,6 +16374,7 @@
 	patches.drivers/cxgb4-0063-cxgb4-remove-workqueue-when-driver-registration-fail.patch
 	patches.drivers/cxgb4-0064-net-cxgb4-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/cxgb4-0065-cgxb4-remove-duplicate-include-in-cxgb4.h.patch
+	patches.drivers/cxgb4-0066-IB-cxgb4-Fix-formatting-of-physical-address.patch
 
 	########################################################
 	# Wireless Networking
