--- a/series.conf
+++ b/series.conf
@@ -16331,6 +16331,7 @@
 	patches.drivers/cxgb4-0020-RDMA-cxgb4-Don-t-wakeup-threads-for-MPAv2.patch
 	patches.drivers/cxgb4-0021-RDMA-cxgb4-Insert-hwtid-in-pass_accept_req-instead-i.patch
 	patches.drivers/cxgb4-0022-RDMA-cxgb4-Address-sparse-warnings.patch
+	patches.drivers/cxgb4-0023-RDMA-cxgb4-cookie-can-stay-in-host-endianness.patch
 
 	########################################################
 	# Wireless Networking
