RDMA/cxgb4: Fix endpoint timeout race condition (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16326,6 +16326,7 @@
 	patches.drivers/cxgb4-0015-RDMA-cxgb4-Keep-QP-referenced-until-TID-released.patch
 	patches.drivers/cxgb4-0016-RDMA-cxgb4-Always-log-async-errors.patch
 	patches.drivers/cxgb4-0017-RDMA-cxgb4-Only-log-rx_data-warnings-if-cpl-status-i.patch
+	patches.drivers/cxgb4-0018-RDMA-cxgb4-Fix-endpoint-timeout-race-condition.patch
 
 	########################################################
 	# Wireless Networking
