cxgb4: Add new scheme to update T4/T5 firmware (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16377,6 +16377,7 @@
 	patches.drivers/cxgb4-0066-IB-cxgb4-Fix-formatting-of-physical-address.patch
 	patches.drivers/cxgb4-0067-cxgb4-Much-cleaner-implementation-of-is_t4-is_t5.patch
 	patches.drivers/cxgb4-0068-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
+	patches.drivers/cxgb4-0069-cxgb4-Add-new-scheme-to-update-T4-T5-firmware.patch
 
 	########################################################
 	# Wireless Networking
