iw_cxgb4: log detailed warnings for negative advice (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16486,6 +16486,7 @@
 	patches.drivers/cxgb4-0175-iw_cxgb4-fix-for-64-bit-integer-division.patch
 	patches.fixes/include-linux-math64.h-add-div64_ul.patch
 	patches.drivers/cxgb4-0177-cxgb4-Add-the-MC1-registers-to-read-in-the-interrupt.patch
+	patches.drivers/cxgb4-0178-iw_cxgb4-log-detailed-warnings-for-negative-advice.patch
 
 	########################################################
 	# Wireless Networking
