--- a/series.conf
+++ b/series.conf
@@ -16370,6 +16370,7 @@
 	patches.drivers/cxgb4-0059-RDMA-cxgb4-Always-do-GTS-write-if-cidx_inc-CIDXINC_M.patch
 	patches.drivers/cxgb4-0060-RDMA-cxgb4-Advertise-0ULL-as-max-MR-size.patch
 	patches.drivers/cxgb4-0061-RDMA-cxgb4-Issue-RI.FINI-before-closing-when-enterin.patch
+	patches.drivers/cxgb4-0062-treewide-Add-__GFP_NOWARN-to-k.alloc-calls-with-v.al.patch
 
 	########################################################
 	# Wireless Networking
