RDMA/cxgb4: Clean up connection on ARP error (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16475,6 +16475,7 @@
 	patches.drivers/cxgb4-0164-cxgb4-Adds-device-ID-for-few-more-Chelsio-T4-Adapter.patch
 	patches.drivers/cxgb4-0165-drivers-net-ethernet-chelsio-cxgb4-cxgb4_main.c-remo.patch
 	patches.drivers/cxgb4-0166-RDMA-cxgb4-Fix-skb_leak-in-reject_cr.patch
+	patches.drivers/cxgb4-0167-RDMA-cxgb4-Clean-up-connection-on-ARP-error.patch
 
 	########################################################
 	# Wireless Networking
