drivers/net/ethernet/chelsio/cxgb4/cxgb4_main.c: remove unnecessary null test before debugfs_remove_recursive (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16473,6 +16473,7 @@
 	patches.drivers/cxgb4-0162-cxgb4-Use-FW-interface-to-get-BAR0-value.patch
 	patches.drivers/cxgb4-0163-cxgb4-Replaced-the-backdoor-mechanism-to-access-the-.patch
 	patches.drivers/cxgb4-0164-cxgb4-Adds-device-ID-for-few-more-Chelsio-T4-Adapter.patch
+	patches.drivers/cxgb4-0165-drivers-net-ethernet-chelsio-cxgb4-cxgb4_main.c-remo.patch
 
 	########################################################
 	# Wireless Networking
