cxgb4: Remove unused registers and add missing ones (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16402,6 +16402,7 @@
 	patches.drivers/cxgb4-0091-cxgb4-Allow-10G-ports-to-have-multiple-queues.patch
 	patches.drivers/cxgb4-0092-cxgb4-LE-Workaround-is-not-atomic-in-firmware.patch
 	patches.drivers/cxgb4-0093-cxgb4-Query-firmware-for-T5-ULPTX-MEMWRITE-DSGL-capa.patch
+	patches.drivers/cxgb4-0094-cxgb4-Remove-unused-registers-and-add-missing-ones.patch
 
 	########################################################
 	# Wireless Networking
