cxgb4: Detect and display firmware reported errors (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16503,6 +16503,7 @@
 	patches.drivers/cxgb4-0192-cxgb4-Fix-for-handling-1Gb-s-SFP-Transceiver-Modules.patch
 	patches.drivers/cxgb4-0193-cxgb4-Fixed-the-code-to-use-correct-length-for-part-.patch
 	patches.drivers/cxgb4-0194-cxgb4-Fix-T5-adapter-accessing-T4-adapter-registers.patch
+	patches.drivers/cxgb4-0195-cxgb4-Detect-and-display-firmware-reported-errors.patch
 
 	########################################################
 	# Wireless Networking
