--- a/series.conf
+++ b/series.conf
@@ -16457,6 +16457,7 @@
 	patches.drivers/cxgb4-0146-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/cxgb4-0147-RDMA-cxgb4-Fix-memory-leaks-in-c4iw_alloc-error-path.patch
 	patches.drivers/cxgb4-0148-RDMA-cxgb4-Add-missing-padding-at-end-of-struct-c4iw.patch
+	patches.drivers/cxgb4-0149-RDMA-cxgb4-add-missing-padding-at-end-of-struct-c4iw.patch
 
 	########################################################
 	# Wireless Networking
