cxgb4: Add more PCI device ids (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16404,6 +16404,7 @@
 	patches.drivers/cxgb4-0093-cxgb4-Query-firmware-for-T5-ULPTX-MEMWRITE-DSGL-capa.patch
 	patches.drivers/cxgb4-0094-cxgb4-Remove-unused-registers-and-add-missing-ones.patch
 	patches.drivers/cxgb4-0095-cxgb4-Don-t-assume-LSO-only-uses-SGL-path-in-t4_eth_.patch
+	patches.drivers/cxgb4-0096-cxgb4-Add-more-PCI-device-ids.patch
 
 	########################################################
 	# Wireless Networking
