RDMA/cxgb4: Keep QP referenced until TID released (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16323,6 +16323,7 @@
 	patches.drivers/cxgb4-0012-RDMA-cxgb4-Abort-connections-that-receive-unexpected.patch
 	patches.drivers/cxgb4-0013-RDMA-cxgb4-Abort-connections-when-moving-to-ERROR-st.patch
 	patches.drivers/cxgb4-0014-RDMA-cxgb4-Display-streaming-mode-error-only-if-dete.patch
+	patches.drivers/cxgb4-0015-RDMA-cxgb4-Keep-QP-referenced-until-TID-released.patch
 
 	########################################################
 	# Wireless Networking
