--- a/series.conf
+++ b/series.conf
@@ -16423,6 +16423,7 @@
 	patches.drivers/cxgb4-0112-RDMA-cxgb4-Default-peer2peer-mode-to-1.patch
 	patches.drivers/cxgb4-0113-RDMA-cxgb4-Save-the-correct-map-length-for-fast_reg_.patch
 	patches.drivers/cxgb4-0114-RDMA-cxgb4-Don-t-leak-skb-in-c4iw_uld_rx_handler.patch
+	patches.drivers/cxgb4-0115-RDMA-cxgb4-Fix-possible-memory-leak-in-RX_PKT-proces.patch
 
 	########################################################
 	# Wireless Networking
