iw_cxgb4: advertise the correct device max attributes (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16488,6 +16488,7 @@
 	patches.drivers/cxgb4-0177-cxgb4-Add-the-MC1-registers-to-read-in-the-interrupt.patch
 	patches.drivers/cxgb4-0178-iw_cxgb4-log-detailed-warnings-for-negative-advice.patch
 	patches.drivers/cxgb4-0179-iw_cxgb4-Support-query_qp-verb.patch
+	patches.drivers/cxgb4-0180-iw_cxgb4-advertise-the-correct-device-max-attributes.patch
 
 	########################################################
 	# Wireless Networking
