cxgb4: Use FW interface to get BAR0 value (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16470,6 +16470,7 @@
 	patches.fixes/net-Add-sysfs-file-for-port-number.patch
 	patches.drivers/cxgb4-0160-cxgb4-use-dev_port-to-identify-ports.patch
 	patches.drivers/cxgb4-0161-rdma-cxgb4-Fixes-cxgb4-probe-failure-in-VM-when-PF-i.patch
+	patches.drivers/cxgb4-0162-cxgb4-Use-FW-interface-to-get-BAR0-value.patch
 
 	########################################################
 	# Wireless Networking
