cxgb4: Call dev_kfree/consume_skb_any instead of [dev_]kfree_skb (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16427,6 +16427,7 @@
 	patches.drivers/cxgb4-0116-RDMA-cxgb4-Ignore-read-reponse-type-1-CQEs.patch
 	patches.drivers/cxgb4-0117-RDMA-cxgb4-Connect_request_upcall-fixes.patch
 	patches.drivers/cxgb4-0118-RDMA-cxgb4-Update-snd_seq-when-sending-MPA-messages.patch
+	patches.drivers/cxgb4-0119-cxgb4-Call-dev_kfree-consume_skb_any-instead-of-dev_.patch
 
 	########################################################
 	# Wireless Networking
