cxgb4 : dcb open-lldp interop fixes (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16529,6 +16529,7 @@
 	patches.drivers/cxgb4-0218-cxgb4-Fix-missing-initialization-of-win0_lock.patch
 	patches.drivers/cxgb4-0219-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
 	patches.drivers/cxgb4-0220-cxgb4-Fix-bug-in-DCB-app-deletion.patch
+	patches.drivers/cxgb4-0221-cxgb4-dcb-open-lldp-interop-fixes.patch
 
 	########################################################
 	# Wireless Networking
