--- a/series.conf
+++ b/series.conf
@@ -16480,6 +16480,7 @@
 	patches.drivers/cxgb4-0169-iw_cxgb4-Detect-Ing.-Padding-Boundary-at-run-time.patch
 	patches.drivers/cxgb4-0170-cxgb4-iw_cxgb4-use-firmware-ord-ird-resource-limits.patch
 	patches.drivers/cxgb4-0171-cxgb4-iw_cxgb4-display-TPTE-on-errors.patch
+	patches.drivers/cxgb4-0172-cxgb4-iw_cxgb4-work-request-logging-feature.patch
 
 	########################################################
 	# Wireless Networking
