--- a/series.conf
+++ b/series.conf
@@ -16495,6 +16495,7 @@
 	patches.drivers/cxgb4-0184-cxgb4-only-free-allocated-fls.patch
 	patches.drivers/cxgb4-0185-cxgb4-Disable-recursive-mailbox-commands-when-enabli.patch
 	patches.drivers/cxgb4-0186-cxgb4-Fix-for-SR-IOV-VF-initialization.patch
+	patches.drivers/cxgb4-0187-cxgb4-Update-FW-version-string-to-match-FW-binary-ve.patch
 
 	########################################################
 	# Wireless Networking
