cxgb4: Avoid dumping Write-only registers in register dump (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16504,6 +16504,7 @@
 	patches.drivers/cxgb4-0193-cxgb4-Fixed-the-code-to-use-correct-length-for-part-.patch
 	patches.drivers/cxgb4-0194-cxgb4-Fix-T5-adapter-accessing-T4-adapter-registers.patch
 	patches.drivers/cxgb4-0195-cxgb4-Detect-and-display-firmware-reported-errors.patch
+	patches.drivers/cxgb4-0196-cxgb4-Avoid-dumping-Write-only-registers-in-register.patch
 
 	########################################################
 	# Wireless Networking
