--- a/series.conf
+++ b/series.conf
@@ -16376,6 +16376,7 @@
 	patches.drivers/cxgb4-0065-cgxb4-remove-duplicate-include-in-cxgb4.h.patch
 	patches.drivers/cxgb4-0066-IB-cxgb4-Fix-formatting-of-physical-address.patch
 	patches.drivers/cxgb4-0067-cxgb4-Much-cleaner-implementation-of-is_t4-is_t5.patch
+	patches.drivers/cxgb4-0068-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 
 	########################################################
 	# Wireless Networking
