--- a/series.conf
+++ b/series.conf
@@ -16487,6 +16487,7 @@
 	patches.fixes/include-linux-math64.h-add-div64_ul.patch
 	patches.drivers/cxgb4-0177-cxgb4-Add-the-MC1-registers-to-read-in-the-interrupt.patch
 	patches.drivers/cxgb4-0178-iw_cxgb4-log-detailed-warnings-for-negative-advice.patch
+	patches.drivers/cxgb4-0179-iw_cxgb4-Support-query_qp-verb.patch
 
 	########################################################
 	# Wireless Networking
