--- a/series.conf
+++ b/series.conf
@@ -16467,6 +16467,7 @@
 	patches.drivers/cxgb4-0156-cxgb4-Update-copyright-year-on-all-cxgb4-files.patch
 	patches.drivers/cxgb4-0157-cxgb4-Fix-endian-bug-introduced-in-cxgb4-dcb-patchse.patch
 	patches.drivers/cxgb4-0158-cxgb4-Not-need-to-hold-the-adap_rcu_lock-lock-when-r.patch
+	patches.fixes/net-Add-sysfs-file-for-port-number.patch
 
 	########################################################
 	# Wireless Networking
