--- a/series.conf
+++ b/series.conf
@@ -16441,6 +16441,7 @@
 	patches.drivers/cxgb4-0130-RDMA-cxgb4-SQ-flush-fix.patch
 	patches.drivers/cxgb4-0131-RDMA-cxgb4-Max-fastreg-depth-depends-on-DSGL-support.patch
 	patches.drivers/cxgb4-0132-RDMA-cxgb4-Use-pr_warn_ratelimited.patch
+	patches.drivers/cxgb4-0133-RDMA-cxgb4-Initialize-reserved-fields-in-a-FW-work-r.patch
 
 	########################################################
 	# Wireless Networking
