--- a/series.conf
+++ b/series.conf
@@ -16425,6 +16425,7 @@
 	patches.drivers/cxgb4-0114-RDMA-cxgb4-Don-t-leak-skb-in-c4iw_uld_rx_handler.patch
 	patches.drivers/cxgb4-0115-RDMA-cxgb4-Fix-possible-memory-leak-in-RX_PKT-proces.patch
 	patches.drivers/cxgb4-0116-RDMA-cxgb4-Ignore-read-reponse-type-1-CQEs.patch
+	patches.drivers/cxgb4-0117-RDMA-cxgb4-Connect_request_upcall-fixes.patch
 
 	########################################################
 	# Wireless Networking
