--- a/series.conf
+++ b/series.conf
@@ -16474,6 +16474,7 @@
 	patches.drivers/cxgb4-0163-cxgb4-Replaced-the-backdoor-mechanism-to-access-the-.patch
 	patches.drivers/cxgb4-0164-cxgb4-Adds-device-ID-for-few-more-Chelsio-T4-Adapter.patch
 	patches.drivers/cxgb4-0165-drivers-net-ethernet-chelsio-cxgb4-cxgb4_main.c-remo.patch
+	patches.drivers/cxgb4-0166-RDMA-cxgb4-Fix-skb_leak-in-reject_cr.patch
 
 	########################################################
 	# Wireless Networking
