cxgb4: make functions static and remove dead code (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16386,6 +16386,7 @@
 	patches.drivers/cxgb4-0075-cxgb4-Account-for-stid-entries-properly-in-case-of-I.patch
 	patches.drivers/cxgb4-0076-cxgb4-Add-API-to-correctly-calculate-tuple-fields.patch
 	patches.drivers/cxgb4-0077-RDMA-cxgb4-Calculate-the-filter-server-TID-properly.patch
+	patches.drivers/cxgb4-0078-cxgb4-make-functions-static-and-remove-dead-code.patch
 
 	########################################################
 	# Wireless Networking
