RDMA/cxgb4: Insert hwtid in pass_accept_req instead in pass_establish (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16329,6 +16329,7 @@
 	patches.drivers/cxgb4-0018-RDMA-cxgb4-Fix-endpoint-timeout-race-condition.patch
 	patches.drivers/cxgb4-0019-RDMA-cxgb4-Don-t-reconnect-on-abort-for-mpa_rev-1.patch
 	patches.drivers/cxgb4-0020-RDMA-cxgb4-Don-t-wakeup-threads-for-MPAv2.patch
+	patches.drivers/cxgb4-0021-RDMA-cxgb4-Insert-hwtid-in-pass_accept_req-instead-i.patch
 
 	########################################################
 	# Wireless Networking
