RDMA/cxgb4: Update Kconfig to include Chelsio T5 adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16450,6 +16450,7 @@
 	patches.drivers/cxgb4-0139-RDMA-cxgb4-Fix-endpoint-mutex-deadlocks.patch
 	patches.drivers/cxgb4-0140-RDMA-cxgb4-Force-T5-connections-to-use-TAHOE-congest.patch
 	patches.drivers/cxgb4-0141-RDMA-cxgb4-Only-allow-kernel-db-ringing-for-T4-devs.patch
+	patches.drivers/cxgb4-0142-RDMA-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adap.patch
 
 	########################################################
 	# Wireless Networking
