--- a/series.conf
+++ b/series.conf
@@ -16352,6 +16352,7 @@
 	patches.drivers/cxgb4-0041-RDMA-cxgb4-Bump-tcam_full-stat-and-WR-reply-timeout.patch
 	patches.drivers/cxgb4-0042-RDMA-cxgb4-Fix-onchip-queue-support-for-T5.patch
 	patches.drivers/cxgb4-0043-Fix-dst_neigh_lookup-dst_neigh_lookup_skb-return-val.patch
+	patches.drivers/cxgb4-0044-RDMA-cxgb4-Fix-error-return-code-in-create_qp.patch
 
 	########################################################
 	# Wireless Networking
