cxgb4: Check if rx checksum offload is enabled, while reading hardware calculated checksum (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16453,6 +16453,7 @@
 	patches.drivers/cxgb4-0142-RDMA-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adap.patch
 	patches.drivers/cxgb4-0143-cxgb4-Decode-PCIe-Gen3-link-speed.patch
 	patches.drivers/cxgb4-0144-cxgb4-Decode-the-firmware-port-and-module-type-a-bit.patch
+	patches.drivers/cxgb4-0145-cxgb4-Check-if-rx-checksum-offload-is-enabled-while-.patch
 
 	########################################################
 	# Wireless Networking
