cxgb4: allow large buffer size to have page size (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16387,6 +16387,7 @@
 	patches.drivers/cxgb4-0076-cxgb4-Add-API-to-correctly-calculate-tuple-fields.patch
 	patches.drivers/cxgb4-0077-RDMA-cxgb4-Calculate-the-filter-server-TID-properly.patch
 	patches.drivers/cxgb4-0078-cxgb4-make-functions-static-and-remove-dead-code.patch
+	patches.drivers/cxgb4-0079-cxgb4-allow-large-buffer-size-to-have-page-size.patch
 
 	########################################################
 	# Wireless Networking
