cxgb4 : Update fw interface file for DCBx support. Adds all the required fields to fw interface to communicate DCBx info (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16460,6 +16460,7 @@
 	patches.drivers/cxgb4-0149-RDMA-cxgb4-add-missing-padding-at-end-of-struct-c4iw.patch
 	patches.drivers/cxgb4-0150-iw_cxgb4-Allocate-and-use-IQs-specifically-for-indir.patch
 	patches.drivers/cxgb4-0151-cxgb4-Change-default-Interrupt-Holdoff-Packet-Count-.patch
+	patches.drivers/cxgb4-0152-cxgb4-Update-fw-interface-file-for-DCBx-support.-Add.patch
 
 	########################################################
 	# Wireless Networking
