cxgb4: Add register definations for T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16334,6 +16334,7 @@
 	patches.drivers/cxgb4-0023-RDMA-cxgb4-cookie-can-stay-in-host-endianness.patch
 	patches.drivers/cxgb4-0024-RDMA-cxgb4-Fix-cast-warning.patch
 	patches.drivers/cxgb4-0025-cxgb4-Allow-for-backward-compatibility-with-new-VPD-.patch
+	patches.drivers/cxgb4-0026-cxgb4-Add-register-definations-for-T5.patch
 
 	########################################################
 	# Wireless Networking
