cxgb4: Add T4 filter support (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16313,6 +16313,7 @@
 	patches.drivers/cxgb4-0002-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submission.patch
 	patches.drivers/cxgb4-0003-cxgb4-remove-__dev-attributes.patch
 	patches.drivers/cxgb4-0004-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
+	patches.drivers/cxgb4-0005-cxgb4-Add-T4-filter-support.patch
 
 	########################################################
 	# Wireless Networking
