RDMA/cxgb4: Add module_params to enable DB FC & Coalescing on T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16346,6 +16346,7 @@
 	patches.drivers/cxgb4-0035-cxgb4-Disable-SR-IOV-support-for-PF4-7-for-T5.patch
 	patches.drivers/cxgb4-0036-RDMA-cxgb4-Add-Support-for-Chelsio-T5-adapter.patch
 	patches.drivers/cxgb4-0037-RDMA-cxgb4-Turn-off-db-coalescing-when-RDMA-QPs-are-.patch
+	patches.drivers/cxgb4-0038-RDMA-cxgb4-Add-module_params-to-enable-DB-FC-Coalesc.patch
 
 	########################################################
 	# Wireless Networking
