cxgb4: Dump T5 registers (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16337,6 +16337,7 @@
 	patches.drivers/cxgb4-0026-cxgb4-Add-register-definations-for-T5.patch
 	patches.drivers/cxgb4-0027-cxgb4-Add-macros-structures-and-inline-functions-for.patch
 	patches.drivers/cxgb4-0028-cxgb4-Initialize-T5.patch
+	patches.drivers/cxgb4-0029-cxgb4-Dump-T5-registers.patch
 
 	########################################################
 	# Wireless Networking
