cxgb4: Include TCP as protocol when creating server filters (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16381,6 +16381,7 @@
 	patches.drivers/cxgb4-0070-RDMA-cxgb4-Make-_c4iw_write_mem_dma-static.patch
 	patches.drivers/cxgb4-0071-net-cxgb4-calls-skb_set_hash.patch
 	patches.drivers/cxgb4-0072-cxgb4-Reserve-stid-0-for-T4-T5-adapters.patch
+	patches.drivers/cxgb4-0073-cxgb4-Include-TCP-as-protocol-when-creating-server-f.patch
 
 	########################################################
 	# Wireless Networking
