--- a/series.conf
+++ b/series.conf
@@ -16311,6 +16311,7 @@
 	# iw_cxgb4 and cxgb4 SP4 update (bsc#909577 FATE#317550)
 	patches.drivers/cxgb4-0001-RDMA-cxgb4-use-WARN.patch
 	patches.drivers/cxgb4-0002-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submission.patch
+	patches.drivers/cxgb4-0003-cxgb4-remove-__dev-attributes.patch
 
 	########################################################
 	# Wireless Networking
