RDMA/cxgb4: Mind the sq_sig_all/sq_sig_type QP attributes (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16419,6 +16419,7 @@
 	patches.drivers/cxgb4-0108-RDMA-cxgb4-Cap-CQ-size-at-T4_MAX_IQ_SIZE.patch
 	patches.drivers/cxgb4-0109-RDMA-cxgb4-Always-release-neigh-entry.patch
 	patches.drivers/cxgb4-0110-RDMA-cxgb4-Fix-incorrect-BUG_ON-conditions.patch
+	patches.drivers/cxgb4-0111-RDMA-cxgb4-Mind-the-sq_sig_all-sq_sig_type-QP-attrib.patch
 
 	########################################################
 	# Wireless Networking
