cxgb4: Add T5 write combining support (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16338,6 +16338,7 @@
 	patches.drivers/cxgb4-0027-cxgb4-Add-macros-structures-and-inline-functions-for.patch
 	patches.drivers/cxgb4-0028-cxgb4-Initialize-T5.patch
 	patches.drivers/cxgb4-0029-cxgb4-Dump-T5-registers.patch
+	patches.drivers/cxgb4-0030-cxgb4-Add-T5-write-combining-support.patch
 
 	########################################################
 	# Wireless Networking
