--- a/series.conf
+++ b/series.conf
@@ -16418,6 +16418,7 @@
 	patches.drivers/cxgb4-0107-RDMA-cxgb4-Fix-four-byte-info-leak-in-c4iw_create_cq.patch
 	patches.drivers/cxgb4-0108-RDMA-cxgb4-Cap-CQ-size-at-T4_MAX_IQ_SIZE.patch
 	patches.drivers/cxgb4-0109-RDMA-cxgb4-Always-release-neigh-entry.patch
+	patches.drivers/cxgb4-0110-RDMA-cxgb4-Fix-incorrect-BUG_ON-conditions.patch
 
 	########################################################
 	# Wireless Networking
