RDMA/cxgb4: Issue RI.FINI before closing when entering TERM (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16369,6 +16369,7 @@
 	patches.drivers/cxgb4-0058-RDMA-cxgb4-Set-arp-error-handler-for-PASS_ACCEPT_RPL.patch
 	patches.drivers/cxgb4-0059-RDMA-cxgb4-Always-do-GTS-write-if-cidx_inc-CIDXINC_M.patch
 	patches.drivers/cxgb4-0060-RDMA-cxgb4-Advertise-0ULL-as-max-MR-size.patch
+	patches.drivers/cxgb4-0061-RDMA-cxgb4-Issue-RI.FINI-before-closing-when-enterin.patch
 
 	########################################################
 	# Wireless Networking
