net/cxgb4: Don't retrieve stats during recovery (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16393,6 +16393,7 @@
 	patches.drivers/cxgb4-0082-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/cxgb4-0083-RDMA-cxgb4-Fix-gcc-warning-on-32-bit-arch.patch
 	patches.drivers/cxgb4-0084-net-cxgb4-Avoid-disabling-PCI-device-for-towice.patch
+	patches.drivers/cxgb4-0085-net-cxgb4-Don-t-retrieve-stats-during-recovery.patch
 
 	########################################################
 	# Wireless Networking
