RDMA/cxgb4: Fix accounting for unsignaled SQ WRs to deal with wrap (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16365,6 +16365,7 @@
 	patches.drivers/cxgb4-0054-RDMA-cxgb4-Use-correct-bit-shift-macros-for-vlan-fil.patch
 	patches.drivers/cxgb4-0055-RDMA-cxgb4-Handle-newer-firmware-changes.patch
 	patches.drivers/cxgb4-0056-RDMA-cxgb4-Fix-QP-flush-logic.patch
+	patches.drivers/cxgb4-0057-RDMA-cxgb4-Fix-accounting-for-unsignaled-SQ-WRs-to-d.patch
 
 	########################################################
 	# Wireless Networking
