--- a/series.conf
+++ b/series.conf
@@ -16379,6 +16379,7 @@
 	patches.drivers/cxgb4-0068-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 	patches.drivers/cxgb4-0069-cxgb4-Add-new-scheme-to-update-T4-T5-firmware.patch
 	patches.drivers/cxgb4-0070-RDMA-cxgb4-Make-_c4iw_write_mem_dma-static.patch
+	patches.drivers/cxgb4-0071-net-cxgb4-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
