cgxb4: Stop using ethtool SPEED_* constants (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16405,6 +16405,7 @@
 	patches.drivers/cxgb4-0094-cxgb4-Remove-unused-registers-and-add-missing-ones.patch
 	patches.drivers/cxgb4-0095-cxgb4-Don-t-assume-LSO-only-uses-SGL-path-in-t4_eth_.patch
 	patches.drivers/cxgb4-0096-cxgb4-Add-more-PCI-device-ids.patch
+	patches.drivers/cxgb4-0097-cgxb4-Stop-using-ethtool-SPEED_-constants.patch
 
 	########################################################
 	# Wireless Networking
