--- a/series.conf
+++ b/series.conf
@@ -16428,6 +16428,7 @@
 	patches.drivers/cxgb4-0117-RDMA-cxgb4-Connect_request_upcall-fixes.patch
 	patches.drivers/cxgb4-0118-RDMA-cxgb4-Update-snd_seq-when-sending-MPA-messages.patch
 	patches.drivers/cxgb4-0119-cxgb4-Call-dev_kfree-consume_skb_any-instead-of-dev_.patch
+	patches.drivers/cxgb4-0120-chelsio-Remove-addressof-casts-to-same-type.patch
 
 	########################################################
 	# Wireless Networking
