--- a/series.conf
+++ b/series.conf
@@ -16452,6 +16452,7 @@
 	patches.drivers/cxgb4-0141-RDMA-cxgb4-Only-allow-kernel-db-ringing-for-T4-devs.patch
 	patches.drivers/cxgb4-0142-RDMA-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adap.patch
 	patches.drivers/cxgb4-0143-cxgb4-Decode-PCIe-Gen3-link-speed.patch
+	patches.drivers/cxgb4-0144-cxgb4-Decode-the-firmware-port-and-module-type-a-bit.patch
 
 	########################################################
 	# Wireless Networking
