cxgb4: Print adapter VPD Part Number instead of Engineering Change field (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16398,6 +16398,7 @@
 	patches.drivers/cxgb4-0087-RDMA-cxgb4-Add-missing-neigh_release-in-LE-Workaroun.patch
 	patches.drivers/cxgb4-0088-cxgb4-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/cxgb4-0089-cxgb4-Add-support-to-recognize-40G-links.patch
+	patches.drivers/cxgb4-0090-cxgb4-Print-adapter-VPD-Part-Number-instead-of-Engin.patch
 
 	########################################################
 	# Wireless Networking
