cxgb3: Correct comparisons and calculations using skb->tail and skb-transport_header (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16357,6 +16357,7 @@
 	patches.drivers/cxgb4-0046-cxgb4-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-a-.patch
 	patches.drivers/cxgb4-0047-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
 	patches.drivers/cxgb4-0048-cxgb4-Force-uninitialized-state-if-FW_ON_ADAPTER-is-.patch
+	patches.drivers/cxgb4-0049-cxgb3-Correct-comparisons-and-calculations-using-skb.patch
 
 	########################################################
 	# Wireless Networking
