--- a/series.conf
+++ b/series.conf
@@ -16384,6 +16384,7 @@
 	patches.drivers/cxgb4-0073-cxgb4-Include-TCP-as-protocol-when-creating-server-f.patch
 	patches.drivers/cxgb4-0074-cxgb4-Assign-filter-server-TIDs-properly.patch
 	patches.drivers/cxgb4-0075-cxgb4-Account-for-stid-entries-properly-in-case-of-I.patch
+	patches.drivers/cxgb4-0076-cxgb4-Add-API-to-correctly-calculate-tuple-fields.patch
 
 	########################################################
 	# Wireless Networking
