--- a/series.conf
+++ b/series.conf
@@ -16500,6 +16500,7 @@
 	patches.drivers/cxgb4-0189-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/cxgb4-0190-cxgb4-Fix-race-condition-in-cleanup.patch
 	patches.drivers/cxgb4-0191-cxgb4-Free-completed-tx-skbs-promptly.patch
+	patches.drivers/cxgb4-0192-cxgb4-Fix-for-handling-1Gb-s-SFP-Transceiver-Modules.patch
 
 	########################################################
 	# Wireless Networking
