--- a/series.conf
+++ b/series.conf
@@ -16492,6 +16492,7 @@
 	patches.drivers/cxgb4-0181-iw_cxgb4-Don-t-limit-TPTE-count-to-32KB.patch
 	patches.drivers/cxgb4-0182-cxgb4-Fixed-incorrect-check-for-memory-operation-in-.patch
 	patches.drivers/cxgb4-0183-RDMA-cxgb4-Only-call-CQ-completion-handler-if-it-is-.patch
+	patches.drivers/cxgb4-0184-cxgb4-only-free-allocated-fls.patch
 
 	########################################################
 	# Wireless Networking
