RDMA/cxgb4: Fix QP flush logic (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16364,6 +16364,7 @@
 	patches.drivers/cxgb4-0053-cxgb4-Add-CLIP-support-to-store-compressed-IPv6-addr.patch
 	patches.drivers/cxgb4-0054-RDMA-cxgb4-Use-correct-bit-shift-macros-for-vlan-fil.patch
 	patches.drivers/cxgb4-0055-RDMA-cxgb4-Handle-newer-firmware-changes.patch
+	patches.drivers/cxgb4-0056-RDMA-cxgb4-Fix-QP-flush-logic.patch
 
 	########################################################
 	# Wireless Networking
