cxgb4: Account for stid entries properly in case of IPv6 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16383,6 +16383,7 @@
 	patches.drivers/cxgb4-0072-cxgb4-Reserve-stid-0-for-T4-T5-adapters.patch
 	patches.drivers/cxgb4-0073-cxgb4-Include-TCP-as-protocol-when-creating-server-f.patch
 	patches.drivers/cxgb4-0074-cxgb4-Assign-filter-server-TIDs-properly.patch
+	patches.drivers/cxgb4-0075-cxgb4-Account-for-stid-entries-properly-in-case-of-I.patch
 
 	########################################################
 	# Wireless Networking
