cxgb4 : Fix DCB priority groups being returned in wrong order (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16530,6 +16530,7 @@
 	patches.drivers/cxgb4-0219-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
 	patches.drivers/cxgb4-0220-cxgb4-Fix-bug-in-DCB-app-deletion.patch
 	patches.drivers/cxgb4-0221-cxgb4-dcb-open-lldp-interop-fixes.patch
+	patches.drivers/cxgb4-0222-cxgb4-Fix-DCB-priority-groups-being-returned-in-wron.patch
 
 	########################################################
 	# Wireless Networking
