RDMA/cxgb4: Always do GTS write if cidx_inc == CIDXINC_MASK (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16367,6 +16367,7 @@
 	patches.drivers/cxgb4-0056-RDMA-cxgb4-Fix-QP-flush-logic.patch
 	patches.drivers/cxgb4-0057-RDMA-cxgb4-Fix-accounting-for-unsignaled-SQ-WRs-to-d.patch
 	patches.drivers/cxgb4-0058-RDMA-cxgb4-Set-arp-error-handler-for-PASS_ACCEPT_RPL.patch
+	patches.drivers/cxgb4-0059-RDMA-cxgb4-Always-do-GTS-write-if-cidx_inc-CIDXINC_M.patch
 
 	########################################################
 	# Wireless Networking
