cxgb4/cxgb4vf: Add Devicde ID for two more adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16514,6 +16514,7 @@
 	patches.drivers/cxgb4-0203-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 	patches.drivers/cxgb4-0204-cxgb4-Don-t-allocate-adapter-structure-for-all-PF-s.patch
 	patches.drivers/cxgb4-0205-cxgb4-Use-BAR2-Going-To-Sleep-GTS-for-T5-and-later.patch
+	patches.drivers/cxgb4-0206-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 
 	########################################################
 	# Wireless Networking
