RDMA/cxgb4: Fix endpoint mutex deadlocks (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16447,6 +16447,7 @@
 	patches.drivers/cxgb4-0136-RDMA-cxgb4-Fix-over-dereference-when-terminating.patch
 	patches.drivers/cxgb4-0137-cxgb4-Save-the-correct-mac-addr-for-hw-loopback-conn.patch
 	patches.drivers/cxgb4-0138-cxgb4-use-the-correct-max-size-for-firmware-flash.patch
+	patches.drivers/cxgb4-0139-RDMA-cxgb4-Fix-endpoint-mutex-deadlocks.patch
 
 	########################################################
 	# Wireless Networking
