cxgb4 : Fix build failure in cxgb4 when ipv6 is disabled/not in-built (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16523,6 +16523,7 @@
 	patches.drivers/cxgb4-0212-RDMA-cxgb4-Make-c4iw_wr_log_size_order-static.patch
 	patches.drivers/cxgb4-0213-cxgb4-Fix-FW-flash-logic-using-ethtool.patch
 	patches.drivers/cxgb4-0214-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adapter.patch
+	patches.drivers/cxgb4-0215-cxgb4-Fix-build-failure-in-cxgb4-when-ipv6-is-disabl.patch
 
 	########################################################
 	# Wireless Networking
