--- a/series.conf
+++ b/series.conf
@@ -16476,6 +16476,7 @@
 	patches.drivers/cxgb4-0165-drivers-net-ethernet-chelsio-cxgb4-cxgb4_main.c-remo.patch
 	patches.drivers/cxgb4-0166-RDMA-cxgb4-Fix-skb_leak-in-reject_cr.patch
 	patches.drivers/cxgb4-0167-RDMA-cxgb4-Clean-up-connection-on-ARP-error.patch
+	patches.drivers/cxgb4-0168-RDMA-cxgb4-Initialize-the-device-status-page.patch
 
 	########################################################
 	# Wireless Networking
