--- a/series.conf
+++ b/series.conf
@@ -16360,6 +16360,7 @@
 	patches.drivers/cxgb4-0049-cxgb3-Correct-comparisons-and-calculations-using-skb.patch
 	patches.drivers/cxgb4-0050-cxgb4-Do-not-set-net_device-dev_id-to-VI-index.patch
 	patches.drivers/cxgb4-0051-RDMA-cxgb4-Fix-stack-info-leak-in-c4iw_create_qp.patch
+	patches.drivers/cxgb4-0052-cxgb4-Add-routines-to-create-and-remove-listening-IP.patch
 
 	########################################################
 	# Wireless Networking
