cxgb4: Add LE hash collision bug fix path in LLD driver (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16314,6 +16314,7 @@
 	patches.drivers/cxgb4-0003-cxgb4-remove-__dev-attributes.patch
 	patches.drivers/cxgb4-0004-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/cxgb4-0005-cxgb4-Add-T4-filter-support.patch
+	patches.drivers/cxgb4-0006-cxgb4-Add-LE-hash-collision-bug-fix-path-in-LLD-driv.patch
 
 	########################################################
 	# Wireless Networking
