remove init of dev->perm_addr in drivers (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16319,6 +16319,7 @@
 	patches.drivers/cxgb4-0008-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-passive-ope.patch
 	patches.drivers/cxgb4-0009-RDMA-cxgb4-Fix-bug-for-active-and-passive-LE-hash-co.patch
 	patches.drivers/cxgb4-0010-chelsio-Use-netdev_-level-and-pr_-level.patch
+	patches.drivers/cxgb4-0011-remove-init-of-dev-perm_addr-in-drivers.patch
 
 	########################################################
 	# Wireless Networking
