--- a/series.conf
+++ b/series.conf
@@ -16330,6 +16330,7 @@
 	patches.drivers/cxgb4-0019-RDMA-cxgb4-Don-t-reconnect-on-abort-for-mpa_rev-1.patch
 	patches.drivers/cxgb4-0020-RDMA-cxgb4-Don-t-wakeup-threads-for-MPAv2.patch
 	patches.drivers/cxgb4-0021-RDMA-cxgb4-Insert-hwtid-in-pass_accept_req-instead-i.patch
+	patches.drivers/cxgb4-0022-RDMA-cxgb4-Address-sparse-warnings.patch
 
 	########################################################
 	# Wireless Networking
