RDMA/cxgb4: Fix underflows in c4iw_create_qp() (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16414,6 +16414,7 @@
 	patches.drivers/cxgb4-0103-cxgb4-Calculate-len-properly-for-LSO-path.patch
 	patches.drivers/cxgb4-0104-cxgb4-iw_cxgb4-Treat-CPL_ERR_KEEPALV_NEG_ADVICE-as-n.patch
 	patches.drivers/cxgb4-0105-cxgb4-iw_cxgb4-Doorbell-Drop-Avoidance-Bug-Fixes.patch
+	patches.drivers/cxgb4-0106-RDMA-cxgb4-Fix-underflows-in-c4iw_create_qp.patch
 
 	########################################################
 	# Wireless Networking
