iw_cxgb4: Don't limit TPTE count to 32KB (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16489,6 +16489,7 @@
 	patches.drivers/cxgb4-0178-iw_cxgb4-log-detailed-warnings-for-negative-advice.patch
 	patches.drivers/cxgb4-0179-iw_cxgb4-Support-query_qp-verb.patch
 	patches.drivers/cxgb4-0180-iw_cxgb4-advertise-the-correct-device-max-attributes.patch
+	patches.drivers/cxgb4-0181-iw_cxgb4-Don-t-limit-TPTE-count-to-32KB.patch
 
 	########################################################
 	# Wireless Networking
