--- a/series.conf
+++ b/series.conf
@@ -16389,6 +16389,7 @@
 	patches.drivers/cxgb4-0078-cxgb4-make-functions-static-and-remove-dead-code.patch
 	patches.drivers/cxgb4-0079-cxgb4-allow-large-buffer-size-to-have-page-size.patch
 	patches.drivers/cxgb4-0080-cxgb4-Changed-FW-check-version-to-match-FW-binary-ve.patch
+	patches.drivers/cxgb4-0081-cxgb4-silence-shift-wrapping-static-checker-warning.patch
 
 	########################################################
 	# Wireless Networking
