RDMA/cxgb4: Only call CQ completion handler if it is armed (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16491,6 +16491,7 @@
 	patches.drivers/cxgb4-0180-iw_cxgb4-advertise-the-correct-device-max-attributes.patch
 	patches.drivers/cxgb4-0181-iw_cxgb4-Don-t-limit-TPTE-count-to-32KB.patch
 	patches.drivers/cxgb4-0182-cxgb4-Fixed-incorrect-check-for-memory-operation-in-.patch
+	patches.drivers/cxgb4-0183-RDMA-cxgb4-Only-call-CQ-completion-handler-if-it-is-.patch
 
 	########################################################
 	# Wireless Networking
