--- a/series.conf
+++ b/series.conf
@@ -16420,6 +16420,7 @@
 	patches.drivers/cxgb4-0109-RDMA-cxgb4-Always-release-neigh-entry.patch
 	patches.drivers/cxgb4-0110-RDMA-cxgb4-Fix-incorrect-BUG_ON-conditions.patch
 	patches.drivers/cxgb4-0111-RDMA-cxgb4-Mind-the-sq_sig_all-sq_sig_type-QP-attrib.patch
+	patches.drivers/cxgb4-0112-RDMA-cxgb4-Default-peer2peer-mode-to-1.patch
 
 	########################################################
 	# Wireless Networking
