net: get rid of SET_ETHTOOL_OPS (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16454,6 +16454,7 @@
 	patches.drivers/cxgb4-0143-cxgb4-Decode-PCIe-Gen3-link-speed.patch
 	patches.drivers/cxgb4-0144-cxgb4-Decode-the-firmware-port-and-module-type-a-bit.patch
 	patches.drivers/cxgb4-0145-cxgb4-Check-if-rx-checksum-offload-is-enabled-while-.patch
+	patches.drivers/cxgb4-0146-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
