--- a/series.conf
+++ b/series.conf
@@ -16375,6 +16375,7 @@
 	patches.drivers/cxgb4-0064-net-cxgb4-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/cxgb4-0065-cgxb4-remove-duplicate-include-in-cxgb4.h.patch
 	patches.drivers/cxgb4-0066-IB-cxgb4-Fix-formatting-of-physical-address.patch
+	patches.drivers/cxgb4-0067-cxgb4-Much-cleaner-implementation-of-is_t4-is_t5.patch
 
 	########################################################
 	# Wireless Networking
