RDMA/cxgb4: Add missing neigh_release in LE-Workaround path (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16395,6 +16395,7 @@
 	patches.drivers/cxgb4-0084-net-cxgb4-Avoid-disabling-PCI-device-for-towice.patch
 	patches.drivers/cxgb4-0085-net-cxgb4-Don-t-retrieve-stats-during-recovery.patch
 	patches.drivers/cxgb4-0086-net-cxgb4-Fix-referencing-freed-adapter.patch
+	patches.drivers/cxgb4-0087-RDMA-cxgb4-Add-missing-neigh_release-in-LE-Workaroun.patch
 
 	########################################################
 	# Wireless Networking
