--- a/series.conf
+++ b/series.conf
@@ -16344,6 +16344,7 @@
 	patches.drivers/cxgb4-0033-cxgb4-Add-T5-PCI-ids.patch
 	patches.drivers/cxgb4-0034-cxgb4-Update-driver-version-and-description.patch
 	patches.drivers/cxgb4-0035-cxgb4-Disable-SR-IOV-support-for-PF4-7-for-T5.patch
+	patches.drivers/cxgb4-0036-RDMA-cxgb4-Add-Support-for-Chelsio-T5-adapter.patch
 
 	########################################################
 	# Wireless Networking
