--- a/series.conf
+++ b/series.conf
@@ -16407,6 +16407,7 @@
 	patches.drivers/cxgb4-0096-cxgb4-Add-more-PCI-device-ids.patch
 	patches.drivers/cxgb4-0097-cgxb4-Stop-using-ethtool-SPEED_-constants.patch
 	patches.drivers/cxgb4-0098-net-cxgb4-use-remove-handler-as-shutdown-handler.patch
+	patches.drivers/cxgb4-0099-cxgb4-Fix-some-small-bugs-in-t4_sge_init_soft-when-o.patch
 
 	########################################################
 	# Wireless Networking
