cxgb4: Save the correct mac addr for hw-loopback connections in the L2T (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16445,6 +16445,7 @@
 	patches.drivers/cxgb4-0134-RDMA-cxgb4-Add-missing-debug-stats.patch
 	patches.drivers/cxgb4-0135-RDMA-cxgb4-Use-uninitialized_var.patch
 	patches.drivers/cxgb4-0136-RDMA-cxgb4-Fix-over-dereference-when-terminating.patch
+	patches.drivers/cxgb4-0137-cxgb4-Save-the-correct-mac-addr-for-hw-loopback-conn.patch
 
 	########################################################
 	# Wireless Networking
