--- a/series.conf
+++ b/series.conf
@@ -16449,6 +16449,7 @@
 	patches.drivers/cxgb4-0138-cxgb4-use-the-correct-max-size-for-firmware-flash.patch
 	patches.drivers/cxgb4-0139-RDMA-cxgb4-Fix-endpoint-mutex-deadlocks.patch
 	patches.drivers/cxgb4-0140-RDMA-cxgb4-Force-T5-connections-to-use-TAHOE-congest.patch
+	patches.drivers/cxgb4-0141-RDMA-cxgb4-Only-allow-kernel-db-ringing-for-T4-devs.patch
 
 	########################################################
 	# Wireless Networking
