cxgb4: Support CPL_SGE_EGR_UPDATEs encapsulated in a CPL_FW4_MSG (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16354,6 +16354,7 @@
 	patches.drivers/cxgb4-0043-Fix-dst_neigh_lookup-dst_neigh_lookup_skb-return-val.patch
 	patches.drivers/cxgb4-0044-RDMA-cxgb4-Fix-error-return-code-in-create_qp.patch
 	patches.drivers/cxgb4-0045-cxgb4-Fix-pci_device_id-structure-initialization-wit.patch
+	patches.drivers/cxgb4-0046-cxgb4-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-a-.patch
 
 	########################################################
 	# Wireless Networking
