cxgb4: Update driver version and description (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16342,6 +16342,7 @@
 	patches.drivers/cxgb4-0031-cxgb4-Enable-doorbell-drop-recovery-only-for-T4-adap.patch
 	patches.drivers/cxgb4-0032-cxgb4-Add-T5-debugfs-support.patch
 	patches.drivers/cxgb4-0033-cxgb4-Add-T5-PCI-ids.patch
+	patches.drivers/cxgb4-0034-cxgb4-Update-driver-version-and-description.patch
 
 	########################################################
 	# Wireless Networking
