RDMA/cxgb4: SQ flush fix (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16438,6 +16438,7 @@
 	patches.drivers/cxgb4-0127-RDMA-cxgb4-Use-the-BAR2-WC-path-for-kernel-QPs-and-T.patch
 	patches.drivers/cxgb4-0128-RDMA-cxgb4-Endpoint-timeout-fixes.patch
 	patches.drivers/cxgb4-0129-RDMA-cxgb4-rmb-after-reading-valid-gen-bit.patch
+	patches.drivers/cxgb4-0130-RDMA-cxgb4-SQ-flush-fix.patch
 
 	########################################################
 	# Wireless Networking
