RDMA/cxgb4: Force T5 connections to use TAHOE congestion control (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16448,6 +16448,7 @@
 	patches.drivers/cxgb4-0137-cxgb4-Save-the-correct-mac-addr-for-hw-loopback-conn.patch
 	patches.drivers/cxgb4-0138-cxgb4-use-the-correct-max-size-for-firmware-flash.patch
 	patches.drivers/cxgb4-0139-RDMA-cxgb4-Fix-endpoint-mutex-deadlocks.patch
+	patches.drivers/cxgb4-0140-RDMA-cxgb4-Force-T5-connections-to-use-TAHOE-congest.patch
 
 	########################################################
 	# Wireless Networking
