--- a/series.conf
+++ b/series.conf
@@ -16363,6 +16363,7 @@
 	patches.drivers/cxgb4-0052-cxgb4-Add-routines-to-create-and-remove-listening-IP.patch
 	patches.drivers/cxgb4-0053-cxgb4-Add-CLIP-support-to-store-compressed-IPv6-addr.patch
 	patches.drivers/cxgb4-0054-RDMA-cxgb4-Use-correct-bit-shift-macros-for-vlan-fil.patch
+	patches.drivers/cxgb4-0055-RDMA-cxgb4-Handle-newer-firmware-changes.patch
 
 	########################################################
 	# Wireless Networking
