--- a/series.conf
+++ b/series.conf
@@ -16351,6 +16351,7 @@
 	patches.drivers/cxgb4-0040-RDMA-cxgb4-Map-pbl-buffers-for-dma-if-using-DSGL.patch
 	patches.drivers/cxgb4-0041-RDMA-cxgb4-Bump-tcam_full-stat-and-WR-reply-timeout.patch
 	patches.drivers/cxgb4-0042-RDMA-cxgb4-Fix-onchip-queue-support-for-T5.patch
+	patches.drivers/cxgb4-0043-Fix-dst_neigh_lookup-dst_neigh_lookup_skb-return-val.patch
 
 	########################################################
 	# Wireless Networking
