cxgb4: Adds device ID for few more Chelsio Adapters (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16430,6 +16430,7 @@
 	patches.drivers/cxgb4-0119-cxgb4-Call-dev_kfree-consume_skb_any-instead-of-dev_.patch
 	patches.drivers/cxgb4-0120-chelsio-Remove-addressof-casts-to-same-type.patch
 	patches.drivers/cxgb4-0121-RDMA-cxgb4-set-error-code-on-kmalloc-failure.patch
+	patches.drivers/cxgb4-0122-cxgb4-Adds-device-ID-for-few-more-Chelsio-Adapters.patch
 
 	########################################################
 	# Wireless Networking
