--- a/series.conf
+++ b/series.conf
@@ -16490,6 +16490,7 @@
 	patches.drivers/cxgb4-0179-iw_cxgb4-Support-query_qp-verb.patch
 	patches.drivers/cxgb4-0180-iw_cxgb4-advertise-the-correct-device-max-attributes.patch
 	patches.drivers/cxgb4-0181-iw_cxgb4-Don-t-limit-TPTE-count-to-32KB.patch
+	patches.drivers/cxgb4-0182-cxgb4-Fixed-incorrect-check-for-memory-operation-in-.patch
 
 	########################################################
 	# Wireless Networking
