RDMA/cxgb4: Save the correct map length for fast_reg_page_lists (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16421,6 +16421,7 @@
 	patches.drivers/cxgb4-0110-RDMA-cxgb4-Fix-incorrect-BUG_ON-conditions.patch
 	patches.drivers/cxgb4-0111-RDMA-cxgb4-Mind-the-sq_sig_all-sq_sig_type-QP-attrib.patch
 	patches.drivers/cxgb4-0112-RDMA-cxgb4-Default-peer2peer-mode-to-1.patch
+	patches.drivers/cxgb4-0113-RDMA-cxgb4-Save-the-correct-map-length-for-fast_reg_.patch
 
 	########################################################
 	# Wireless Networking
