--- a/series.conf
+++ b/series.conf
@@ -16399,6 +16399,7 @@
 	patches.drivers/cxgb4-0088-cxgb4-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/cxgb4-0089-cxgb4-Add-support-to-recognize-40G-links.patch
 	patches.drivers/cxgb4-0090-cxgb4-Print-adapter-VPD-Part-Number-instead-of-Engin.patch
+	patches.drivers/cxgb4-0091-cxgb4-Allow-10G-ports-to-have-multiple-queues.patch
 
 	########################################################
 	# Wireless Networking
