--- a/series.conf
+++ b/series.conf
@@ -16400,6 +16400,7 @@
 	patches.drivers/cxgb4-0089-cxgb4-Add-support-to-recognize-40G-links.patch
 	patches.drivers/cxgb4-0090-cxgb4-Print-adapter-VPD-Part-Number-instead-of-Engin.patch
 	patches.drivers/cxgb4-0091-cxgb4-Allow-10G-ports-to-have-multiple-queues.patch
+	patches.drivers/cxgb4-0092-cxgb4-LE-Workaround-is-not-atomic-in-firmware.patch
 
 	########################################################
 	# Wireless Networking
