chelsio: Use netdev_<level> and pr_<level> (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16318,6 +16318,7 @@
 	patches.drivers/cxgb4-0007-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-active-open.patch
 	patches.drivers/cxgb4-0008-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-passive-ope.patch
 	patches.drivers/cxgb4-0009-RDMA-cxgb4-Fix-bug-for-active-and-passive-LE-hash-co.patch
+	patches.drivers/cxgb4-0010-chelsio-Use-netdev_-level-and-pr_-level.patch
 
 	########################################################
 	# Wireless Networking
