net: cxgb4: remove unnecessary pci_set_drvdata() (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16372,6 +16372,7 @@
 	patches.drivers/cxgb4-0061-RDMA-cxgb4-Issue-RI.FINI-before-closing-when-enterin.patch
 	patches.drivers/cxgb4-0062-treewide-Add-__GFP_NOWARN-to-k.alloc-calls-with-v.al.patch
 	patches.drivers/cxgb4-0063-cxgb4-remove-workqueue-when-driver-registration-fail.patch
+	patches.drivers/cxgb4-0064-net-cxgb4-remove-unnecessary-pci_set_drvdata.patch
 
 	########################################################
 	# Wireless Networking
