cxgb4: Disable SR-IOV support for PF4-7 for T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16343,6 +16343,7 @@
 	patches.drivers/cxgb4-0032-cxgb4-Add-T5-debugfs-support.patch
 	patches.drivers/cxgb4-0033-cxgb4-Add-T5-PCI-ids.patch
 	patches.drivers/cxgb4-0034-cxgb4-Update-driver-version-and-description.patch
+	patches.drivers/cxgb4-0035-cxgb4-Disable-SR-IOV-support-for-PF4-7-for-T5.patch
 
 	########################################################
 	# Wireless Networking
